# cake

./: .gitignore  Cargo.toml  README.md  check_cache_dir.py  fetch_list_of_safetensor_files.py  get_models.py  hf_transfer_test.py  models_downloaded.txt  output.json  safetensor-models-text-gen.json  test.py  test_list.py
.github/workflows/: on-pull-request.yml  on-release.yml
results/0x7o/BulgakovLM-3B/: hashes.json
results/0x7o/pyGPT-50M/: hashes.json
results/AI-Sweden-Models/gpt-sw3-1.3b-instruct/: hashes.json
results/AI-Sweden-Models/gpt-sw3-126m-instruct/: hashes.json
results/AI-Sweden-Models/gpt-sw3-20b-instruct/: hashes.json
results/AI-Sweden-Models/gpt-sw3-356m-instruct/: hashes.json
results/AI-Sweden-Models/gpt-sw3-6.7b-v2/: hashes.json
results/AI-Sweden-Models/gpt-sw3-6.7b-v2-instruct/: hashes.json
results/AlexWortega/instruct_rugptlarge/: hashes.json
results/AlexWortega/wortegaLM/: hashes.json
results/Ar4ikov/PromptGPTv2/: hashes.json
results/Avitas8485/Dialogpt-medium-finetuned/: hashes.json
results/Avitas8485/Dialogpt-small-v1/: hashes.json
results/BiaDd/DialoGPT-medium-Punko/: hashes.json
results/BigSalmon/InformalToFormalLincoln95Paraphrase/: hashes.json
results/BreadAi/MuseCan-1-2/: hashes.json
results/BreadAi/PM_modelV2/: hashes.json
results/BreadAi/StoryPy/: hashes.json
scripts/: count_model_matches.py  estimate_savings.py  find_common_layers.py  match_layer_hashes.py  remove_incomplete_results.py
src/: compare.rs  download.rs  export.rs  hash.rs  hasher.rs  hf.rs  main.rs  registry.rs
(+130 files in other folders)
