[package]
name = "cake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7.5"
clap = { version = "4.5.1", features = ["derive"] }
console = "0.15.8"
indicatif = "0.17.8"
lz4 = "1.24.0"
rand = "0.8.5"
rayon = "1.8.1"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
safetensors = "0.4.2"
serde = "1.0.197"
serde_json = "1.0.113"
sha2 = "0.10.8"
tokio = { version = "1.37.0", features = ["full"] }
tokio-test = "0.4.4"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing-subscriber = "0.3.18"
